--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+      <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWCeHVGAhiySpUN9nKx7hV-b1yRL-QtMk&libraries=places"></script> -->
+
 </head>
 
 <body>
@@ -25,7 +27,7 @@
 
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkns8XquYt7HXm6yPcBhYrJA5w9_yHcyA&libraries=geometry,places"></script>
-  
+  <!-- <script src="https://maps.googleapis.com/maps/api/place/autocomplete/output?parameters"></script> -->
 
 
 </html>
